# universe

./: CMakeLists.txt  README.md  imgui.ini  run.sh  universe.yml
include/graphics/: manager.hpp  shader.hpp
include/octree/: node.hpp  tree.hpp
include/scene/: camera.hpp  scene.hpp
include/simulation/: barnes_hut.hpp  body.hpp  bound.hpp  n_body.hpp
include/ui/: launcher.hpp
src/: main.cpp
src/graphics/: manager.cpp  shader.cpp
src/octree/: node.cpp  tree.cpp
src/scene/: camera.cpp  scene.cpp
src/simulation/: barnes_hut.cpp  body.cpp  bound.cpp  n_body.cpp
src/ui/: imgui.ini  launcher.cpp
